--- a/templates/content_element/accordion/scroll-open.html.twig
+++ b/templates/content_element/accordion/scroll-open.html.twig
@@ -11,23 +11,25 @@
             (function () {
                 document.addEventListener('DOMContentLoaded', function () {
 
+                    var removeHash = true; // Setze auf 'false', um die Hash-Entfernung zu deaktivieren
+
                     var accordion = new handorgel(document.querySelector('.handorgel'), {
                     multiSelectable: true, // Kann geändert werden, je nach gewünschtem Verhalten
                     collapsible: true
                     });
                 
                     function closeAllPanels() {
-                    var openButtons = document.querySelectorAll('.handorgel__header--open button[aria-expanded="true"]');
-                    openButtons.forEach(button => {
-                        button.setAttribute('aria-expanded', 'false');
-                        button.parentElement.classList.remove('handorgel__header--open', 'handorgel__header--opened');
-                        var contentId = button.getAttribute('aria-controls');
-                        var content = document.getElementById(contentId);
-                        if (content) {
-                        content.classList.remove('handorgel__content--open', 'handorgel__content--opened');
-                        content.style.height = '0';
-                        }
-                    });
+                        var openButtons = document.querySelectorAll('.handorgel__header--open button[aria-expanded="true"]');
+                        openButtons.forEach(button => {
+                            button.setAttribute('aria-expanded', 'false');
+                            button.parentElement.classList.remove('handorgel__header--open', 'handorgel__header--opened');
+                            var contentId = button.getAttribute('aria-controls');
+                            var content = document.getElementById(contentId);
+                            if (content) {
+                            content.classList.remove('handorgel__content--open', 'handorgel__content--opened');
+                            content.style.height = '0';
+                            }
+                        });
                     }
                 
                     function openPanelById(panelId) {
@@ -39,11 +41,16 @@
                         button.parentElement.classList.add('handorgel__header--open', 'handorgel__header--opened');
                         var content = document.getElementById(panelId);
                         if (content) {
-                        content.classList.add('handorgel__content--open', 'handorgel__content--opened');
-                        content.style.height = 'auto';
-                        button.scrollIntoView({ behavior: 'smooth' });
+                            content.classList.add('handorgel__content--open', 'handorgel__content--opened');
+                            content.style.height = 'auto';
+                            button.scrollIntoView({ behavior: 'smooth' });
+
+                                // Optional: Hash aus der URL entfernen
+                                if (removeHash) {
+                                history.replaceState("", document.title, window.location.pathname + window.location.search);
+                                }
+                            }
                         }
-                    }
                     }
                 
                     var hash = window.location.hash.substring(1);
@@ -52,10 +59,10 @@
                     }
                 
                     window.addEventListener('hashchange', function() {
-                    var hash = window.location.hash.substring(1);
-                    if (hash) {
-                        openPanelById(hash);
-                    }
+                        var hash = window.location.hash.substring(1);
+                        if (hash) {
+                            openPanelById(hash);
+                        }
                     });
                 });
             })();
